--- a/templates/groups.html
+++ b/templates/groups.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Название страницы{% endblock %}
+{% block title %}Группы{% endblock %}
 
 {% block content %}
 <body>
     <h1>Группы параметров</h1>
 
     <a href="{{ url_for('groups.export_to_xccdf_file') }}" class="export-button">Экспорт XCCDF</a>
-    <a href="{{ url_for('groups.add_group') }}" class="export-button">+ Добавить группу</a>
+    <a href="{{ url_for('groups.add_group') }}" class="export-button">+Добавить группу</a>
     
     <table class="groups-table">
         <thead>
